# aliasIsolation

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  compile.cmd  compile_debug.cmd  detachAll_debug.cmd  detachAll_release.cmd  release.cmd  release_debug.cmd  sln-vs2015.cmd  sln-vs2019.cmd  sln-vs2022.cmd  tundra.lua  units.lua
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: msbuild.yml  release.yml
data/shaders/: bloomMerge_ps.hlsl  chromaticAberration_ps.hlsl  mainPost_vs.hlsl  shadowDownsample_ps.hlsl  shadowLinearize_ps.hlsl  sharpen_ps.hlsl  taa_cs.hlsl
src/cinematicTools/: Camera.cpp  Camera.h  Hooks.cpp  Hooks.h  Main.cpp  Main.h  Menu.cpp  Menu.h  Offsets.cpp  Offsets.h  Other.cpp  Other.h  PostProcess.cpp  PostProcess.h  README.txt  Source.cpp
src/cinematicTools/Tools/: Log.cpp  Log.h
src/cinematicTools/renderer/: README.txt  Renderer.cpp  Renderer.h  shader_fx.h
src/common/: dllParams.cpp  dllParams.h  injection.cpp  injection.h  settings.cpp  settings.h
src/crashHandler/: CMakeLists.txt  crashHandler.cpp  crashHandler.h
src/dll/: CMakeLists.txt  alienResources.h  common.h  constantBuffers.h  dllMain.cpp  fnTypes.h  frameConstants.h  hookedFns.h  math.h  menu.cpp  menu.h  methodHook.cpp  methodHook.h  post.cpp  post.h  profiler.cpp  profiler.h  rendering.cpp  rendering.h  resourceUtil.cpp  resourceUtil.h  settings.cpp  settings.h  shaderHooks.cpp  shaderHooks.h  shaderRegistry.cpp  shaderRegistry.h  taa.cpp  taa.h  utilities.cpp  utilities.h  vtables.h
src/injector/: injector.cpp
src/injectorGui/: injectorGui.cpp
tools/: compileShader.cmd
